--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 /* @import url("https://fonts.cdnfonts.com/css/american-captain-2"); */
 @import url("https://db.onlinewebfonts.com/c/a6bec1c4ef2d2fd1bac5a6951f5f32a3?family=American+Captain");
 
-
 * {
   padding: 0;
   margin: 0;
@@ -9,8 +8,10 @@
 }
 body {
   background: #fe1818;
-    font-family: "American Captain";
-
+  font-family: "American Captain";
+}
+button {
+  cursor: pointer;
 }
 
 .main-header {
@@ -40,131 +41,148 @@ body {
   object-fit: cover;
 }
 .right-box {
-    height: 62%;
-    width: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: end;
+  height: 62%;
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
 .login-btn {
-color: #000;
-    font-family: "American Captain";
-    font-size: larger;
-    letter-spacing: 1.2px;
-    font-style: normal;
-    width: 100%;
-    font-weight: 600;
-    line-height: normal;
-    /* padding: 2% 9%; */
-    background: #fff;
-    border: 2px solid;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 8px;
-}
-.hero-section{
-    height: 100vh;
-    width: 100%;
-    /* background: url('./public/star-page-3@2x.png') ; */
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow-x: hidden;
-    position: relative;
-    /* padding-top: 10vh; */
-}
-.bg-img{
-    height: 110%;
-    width: 110%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    overflow-x: hidden;
-    z-index: -99;
-
-}
-.bg-img img{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: -5%;
-    z-index: -99;
+  color: #000;
+  font-family: "American Captain";
+  font-size: larger;
+  letter-spacing: 1.2px;
+  font-style: normal;
+  width: 100%;
+  font-weight: 600;
+  line-height: normal;
+  /* padding: 2% 9%; */
+  background: #fff;
+  border: 2px solid;
+  border-bottom: 4px solid;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
 }
 
-.bg-img-2{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.bg-img-2 img{
-    /* height: 64%; */
-    width: 48%;
-    animation: bounce2 1s ease-in-out alternate infinite;
-
+.login-btn:hover{
+    color: #2b2b2b;
+    border: 4px solid;
 }
 
-    @keyframes bounce2 {
-        from{
-            transform: translateY(0);
-        }
-        to{
-            transform: translateY(24px);
-        }
-    }
 
-.bg-text-large{
-    position: absolute;
-    top: 28%;
-    /* left: 30%%; */
-    font-size: 440px;
-    color: white;
-    font-weight: 900;
-    z-index: -9;
-    -webkit-text-stroke: #000;
-    -webkit-text-stroke-width: 4px;
+.hero-section {
+  height: 100vh;
+  width: 100%;
+  /* background: url('./public/star-page-3@2x.png') ; */
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow-x: hidden;
+  position: relative;
+  /* padding-top: 10vh; */
 }
-.btns{
-    position: absolute;
-    bottom: 8%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8%;
-    font-size: large;
-    height: 8vh;
+.bg-img {
+  height: 110%;
+  width: 110%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow-x: hidden;
+  z-index: -99;
 }
-.btn-wrapper{
-    display: flex;
-    background: #FFF;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 12px;
-    height: 80%;
-    border-radius: 8px;
-    gap: 32px;
-    border: 2px solid;
+.bg-img img {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: -5%;
+  z-index: -99;
 }
-.cta-1-btn{
-    border-radius: 4px;
-    padding: 10px 32px;
-    font-family: "American Captain";
-    border: 2px solid;
-    height: 80%;
-    font-size: large;
+
+.bg-img-2 {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.btn-wrapper button{
-    background: #FFAA6F;
-    border-radius: 4px;
-    font-size: large;
-    font-family: "American Captain";
-    padding: 6px 16px;
+.bg-img-2 img {
+  /* height: 64%; */
+  width: 48%;
+  animation: bounce2 1s ease-in-out alternate infinite;
 }
+
+@keyframes bounce2 {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(24px);
+  }
+}
+
+.bg-text-large {
+  position: absolute;
+  top: 28%;
+  /* left: 30%%; */
+  font-size: 440px;
+  color: white;
+  font-weight: 900;
+  z-index: -9;
+  -webkit-text-stroke: #000;
+  -webkit-text-stroke-width: 4px;
+}
+.btns {
+  position: absolute;
+  bottom: 8%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8%;
+  font-size: large;
+  height: 8vh;
+}
+.btn-wrapper {
+  display: flex;
+  background: #fff;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 12px;
+  height: 80%;
+  border-radius: 8px;
+  gap: 32px;
+  border: 2px solid;
+}
+.cta-1-btn {
+  border-radius: 4px;
+  padding: 10px 32px;
+  font-family: "American Captain";
+  border: 2px solid;
+  height: 80%;
+  font-size: large;
+}
+.btn-wrapper button {
+  background: #ffaa6f;
+  border-radius: 4px;
+  font-size: large;
+  font-family: "American Captain";
+  padding: 6px 16px;
+  border: 2px solid;
+  border-bottom: 4px solid;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+.btn-wrapper button:hover{
+    border: 3px solid;
+    padding: 6px 20px;
+}
+/* animation */
